--- a/Components/index.html
+++ b/Components/index.html
@@ -1,13 +1,47 @@
 <!DOCTYPE html>
 <html lang='en'>
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>PLayground</title>
-        
-    </head>
-                        
-<h1 href="" class="" id = "" >Welcome to Woma.py</h1>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Woma.py Tutorial</title>
+    <script src='./index.js'></script>
+    <link rel='stylesheet' href='./index.css'>
+</head>
+
+<body>
+    <header href="" class="headman" id="">This is how to make an html file in woma.py</header>
+    <div href="" class="middle" id="">woma is the best python frontend framework yet, and the most famous</div>
+    <footer  class="foot" id="">powered by team woma</footer>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+        }
+
+        .headman,
+        .middle,
+        .foot {
+            display: block;
+            padding: 10px;
+            background-color: aqua;
+            color: chocolate;
+            margin: 6px solid black;
+            width: 600px;
+        }
+
+        .headman,
+        .foot,
+        .middle:hover {
+            background-color: chocolate;
+            color: aquamarine;
+        }
+
+        * {
+            box-sizing: border-box;
+        }
+    </style>
+</body>
+
 </html>
